libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__unexpected-top-level-token.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: unexpected identifier at top level at 1:1
	  1 | notAKeyword
	    | ^
	- parse error: missing required 'version' directive
