libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__value-bad-type.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: expected a value type, got identifier at 1:10
	  1 | value x: notAType { value = "x" }
	    |          ^
	- parse error: expected element name, got '=' at 1:27
	  1 | value x: notAType { value = "x" }
	    |                           ^
	- parse error: missing required 'version' directive
