libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__value-call.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: "format!(\"{bp:#?}\")"

---
Blueprint {
    version: Some(
        Scalar {
            value: String(
                "2025-11-02",
            ),
            span: Some(
                Span {
                    start: Position {
                        line: 1,
                        column: 9,
                    },
                    end: Some(
                        Position {
                            line: 1,
                            column: 21,
                        },
                    ),
                },
            ),
        },
    ),
    transform: [],
    variables: NamedMap {
        values: {},
        source_meta: {},
    },
    values: NamedMap {
        values: {
            "encodedConfig": Value {
                value_type: Spanned {
                    value: String,
                    span: Some(
                        Span {
                            start: Position {
                                line: 3,
                                column: 22,
                            },
                            end: Some(
                                Position {
                                    line: 3,
                                    column: 28,
                                },
                            ),
                        },
                    ),
                },
                value: StringWithSubstitutions(
                    StringOrSubstitutions {
                        values: [
                            Substitution(
                                Substitution {
                                    kind: Function(
                                        SubstitutionFunction {
                                            name: SubstitutionFunctionName(
                                                "jsonencode",
                                            ),
                                            arguments: [
                                                SubstitutionFunctionArg {
                                                    name: None,
                                                    value: Substitution {
                                                        kind: Variable(
                                                            SubstitutionVariable {
                                                                variable_name: "config",
                                                            },
                                                        ),
                                                        span: Some(
                                                            Span {
                                                                start: Position {
                                                                    line: 4,
                                                                    column: 24,
                                                                },
                                                                end: Some(
                                                                    Position {
                                                                        line: 4,
                                                                        column: 40,
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                    span: Some(
                                                        Span {
                                                            start: Position {
                                                                line: 4,
                                                                column: 24,
                                                            },
                                                            end: Some(
                                                                Position {
                                                                    line: 4,
                                                                    column: 40,
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                },
                                            ],
                                            path: [],
                                        },
                                    ),
                                    span: Some(
                                        Span {
                                            start: Position {
                                                line: 4,
                                                column: 13,
                                            },
                                            end: Some(
                                                Position {
                                                    line: 4,
                                                    column: 41,
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ),
                        ],
                        span: Some(
                            Span {
                                start: Position {
                                    line: 4,
                                    column: 13,
                                },
                                end: Some(
                                    Position {
                                        line: 4,
                                        column: 41,
                                    },
                                ),
                            },
                        ),
                    },
                ),
                description: None,
                secret: None,
                span: Some(
                    Span {
                        start: Position {
                            line: 3,
                            column: 7,
                        },
                        end: Some(
                            Position {
                                line: 3,
                                column: 20,
                            },
                        ),
                    },
                ),
            },
        },
        source_meta: {
            "encodedConfig": Span {
                start: Position {
                    line: 3,
                    column: 7,
                },
                end: Some(
                    Position {
                        line: 3,
                        column: 20,
                    },
                ),
            },
        },
    },
    include: NamedMap {
        values: {},
        source_meta: {},
    },
    resources: NamedMap {
        values: {},
        source_meta: {},
    },
    data_sources: NamedMap {
        values: {},
        source_meta: {},
    },
    exports: NamedMap {
        values: {},
        source_meta: {},
    },
    metadata: None,
    span: None,
}
