libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__value-expression.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: "format!(\"{bp:#?}\")"

---
Blueprint {
    version: Some(
        Scalar {
            value: String(
                "2025-11-02",
            ),
            span: Some(
                Span {
                    start: Position {
                        line: 1,
                        column: 9,
                    },
                    end: Some(
                        Position {
                            line: 1,
                            column: 21,
                        },
                    ),
                },
            ),
        },
    ),
    transform: [],
    variables: NamedMap {
        values: {},
        source_meta: {},
    },
    values: NamedMap {
        values: {
            "isProd": Value {
                value_type: Spanned {
                    value: Boolean,
                    span: Some(
                        Span {
                            start: Position {
                                line: 3,
                                column: 15,
                            },
                            end: Some(
                                Position {
                                    line: 3,
                                    column: 22,
                                },
                            ),
                        },
                    ),
                },
                value: StringWithSubstitutions(
                    StringOrSubstitutions {
                        values: [
                            Substitution(
                                Substitution {
                                    kind: Function(
                                        SubstitutionFunction {
                                            name: SubstitutionFunctionName(
                                                "and",
                                            ),
                                            arguments: [
                                                SubstitutionFunctionArg {
                                                    name: None,
                                                    value: Substitution {
                                                        kind: Function(
                                                            SubstitutionFunction {
                                                                name: SubstitutionFunctionName(
                                                                    "eq",
                                                                ),
                                                                arguments: [
                                                                    SubstitutionFunctionArg {
                                                                        name: None,
                                                                        value: Substitution {
                                                                            kind: Variable(
                                                                                SubstitutionVariable {
                                                                                    variable_name: "environment",
                                                                                },
                                                                            ),
                                                                            span: Some(
                                                                                Span {
                                                                                    start: Position {
                                                                                        line: 4,
                                                                                        column: 13,
                                                                                    },
                                                                                    end: Some(
                                                                                        Position {
                                                                                            line: 4,
                                                                                            column: 34,
                                                                                        },
                                                                                    ),
                                                                                },
                                                                            ),
                                                                        },
                                                                        span: None,
                                                                    },
                                                                    SubstitutionFunctionArg {
                                                                        name: None,
                                                                        value: Substitution {
                                                                            kind: String(
                                                                                "prod",
                                                                            ),
                                                                            span: Some(
                                                                                Span {
                                                                                    start: Position {
                                                                                        line: 4,
                                                                                        column: 38,
                                                                                    },
                                                                                    end: Some(
                                                                                        Position {
                                                                                            line: 4,
                                                                                            column: 44,
                                                                                        },
                                                                                    ),
                                                                                },
                                                                            ),
                                                                        },
                                                                        span: None,
                                                                    },
                                                                ],
                                                                path: [],
                                                            },
                                                        ),
                                                        span: Some(
                                                            Span {
                                                                start: Position {
                                                                    line: 4,
                                                                    column: 13,
                                                                },
                                                                end: Some(
                                                                    Position {
                                                                        line: 4,
                                                                        column: 44,
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                    span: None,
                                                },
                                                SubstitutionFunctionArg {
                                                    name: None,
                                                    value: Substitution {
                                                        kind: Function(
                                                            SubstitutionFunction {
                                                                name: SubstitutionFunctionName(
                                                                    "not",
                                                                ),
                                                                arguments: [
                                                                    SubstitutionFunctionArg {
                                                                        name: None,
                                                                        value: Substitution {
                                                                            kind: Variable(
                                                                                SubstitutionVariable {
                                                                                    variable_name: "maintenanceMode",
                                                                                },
                                                                            ),
                                                                            span: Some(
                                                                                Span {
                                                                                    start: Position {
                                                                                        line: 4,
                                                                                        column: 49,
                                                                                    },
                                                                                    end: Some(
                                                                                        Position {
                                                                                            line: 4,
                                                                                            column: 74,
                                                                                        },
                                                                                    ),
                                                                                },
                                                                            ),
                                                                        },
                                                                        span: None,
                                                                    },
                                                                ],
                                                                path: [],
                                                            },
                                                        ),
                                                        span: Some(
                                                            Span {
                                                                start: Position {
                                                                    line: 4,
                                                                    column: 49,
                                                                },
                                                                end: Some(
                                                                    Position {
                                                                        line: 4,
                                                                        column: 74,
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                    span: None,
                                                },
                                            ],
                                            path: [],
                                        },
                                    ),
                                    span: Some(
                                        Span {
                                            start: Position {
                                                line: 4,
                                                column: 13,
                                            },
                                            end: Some(
                                                Position {
                                                    line: 4,
                                                    column: 74,
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ),
                        ],
                        span: Some(
                            Span {
                                start: Position {
                                    line: 4,
                                    column: 13,
                                },
                                end: Some(
                                    Position {
                                        line: 4,
                                        column: 74,
                                    },
                                ),
                            },
                        ),
                    },
                ),
                description: None,
                secret: None,
                span: Some(
                    Span {
                        start: Position {
                            line: 3,
                            column: 7,
                        },
                        end: Some(
                            Position {
                                line: 3,
                                column: 13,
                            },
                        ),
                    },
                ),
            },
        },
        source_meta: {
            "isProd": Span {
                start: Position {
                    line: 3,
                    column: 7,
                },
                end: Some(
                    Position {
                        line: 3,
                        column: 13,
                    },
                ),
            },
        },
    },
    include: NamedMap {
        values: {},
        source_meta: {},
    },
    resources: NamedMap {
        values: {},
        source_meta: {},
    },
    data_sources: NamedMap {
        values: {},
        source_meta: {},
    },
    exports: NamedMap {
        values: {},
        source_meta: {},
    },
    metadata: None,
    span: None,
}
